kubernetes/ingress/ingress-object.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: okapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: okapi2-tls
    hosts:
    - okapi2.frontside.io
  rules:
  - host: okapi2.frontside.io
    http:
      paths:
      - path: /
        backend:
          serviceName: okapi
          servicePort: 80
