kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: okapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: okapi-sandbox.frontside.io
    http:
      paths:
      - path: /
        backend:
          serviceName: okapi
          servicePort: 80
